@@ -6,3 +6,8 @@ void _putchar(char c)
 {
     putchar(c);
 }
+
+void _exitEmu(void)
+{
+    exit(0);
+}
